pipelines/Kubernetes/Normal/Ingress-Nginx/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kibana.<Domain>
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
  - host: dev.<Domain>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-common
            port:
              number: 8080
  - host: qa.<Domain>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: qa-common
            port:
              number: 8080
  - host: uat.<Domain>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uat-common
            port:
              number: 8080
